fixed alignments

--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,13 @@ body {background-color: rgba(217, 77, 93,1); font-family: 'Montserrat', sans-ser
 img {width: 100%; margin: 0px; padding: 0em;}
 p {margin-top: 1px; text-align: left;}
 h3 {text-align: left;}
+h1 {text-align: center;}
 footer {padding-bottom: 1em; padding-top: 1em;}
+
+#name {
+  text-align: center;
+}
+
 
 /* Add a black background color to the top navigation */
 .topnav {
